[package]
name = "smaragdina"
version = "0.1.0"
edition = "2021"

[dependencies]
# bincode = { version = "2.0.1", features = ["derive"] }
clap = { version = "4.5.37", features = ["derive"] }
env_logger = "0.11.8"
image = { version = "0.25.6", features = ["rayon"] }
log = "0.4.27"
thiserror = "2.0.12"
